# MonaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.cfg  config.cfg.in
Assets/: Idle.fbx  xbot.fbx
Assets/Animations/Maria/: idle.fbx  walking.fbx  walking0.fbx  walking1.fbx  walking2.fbx
Assets/Animations/PrisonerBStyperek/: sexyWalk.fbx  walking.fbx
Assets/Animations/SportyGranny/: Idle.fbx  Walking.fbx  walking0.fbx  walking1.fbx  walking2.fbx
Assets/Animations/TheBoss/: Idle.fbx  WalkAndAim.fbx  walking.fbx  walking0.fbx  walking1.fbx  walking2.fbx
Assets/Animations/akai/: Running.fbx  idle.fbx  walking0.fbx  walking1.fbx  walking2.fbx  walking3.fbx  walking4.fbx  walking5.fbx  walking6.fbx  walking7.fbx  walking8.fbx
Assets/Animations/ely/: idle.fbx  walking.fbx  walking0.fbx  walking1.fbx  walking2.fbx
Assets/Animations/prisoner/: idle.fbx  walking.fbx  walking0.fbx  walking1.fbx  walking2.fbx
Assets/Shaders/: AnimTest.vs  BasicPS.ps  BasicVS.vs  DiffuseFlat.ps  DiffuseFlatSkinning.vs  DiffuseTextured.ps  DiffuseTexturedSkinning.vs  LineVS.vs  PBRFlat.ps  PBRFlatSkinning.vs  PBRTextured.ps  PBRTexturedSkinning.vs  TexturedModel.ps  TexturedModel.vs  UnlitTexturedSkinning.vs
CMakeConfigFiles/: RootDirectory.cpp.in  RootDirectory.hpp.in
examples/: AnimationAudioExample.cpp  Breakout.cpp  CMakeLists.txt  Example0_BasicPrimitives_NoTransform.cpp  IKBasicExample.cpp  IKMultipleCharactersExample.cpp  IKMultipleTerrainsExample.cpp  IKProperAnimationExample.cpp  IKSimpleAnimationExample.cpp  IKSimpleExample.cpp  MinimalSetup.cpp  NoIKFlatTerrainExample.cpp  README.md  WindowInputExample.cpp  main.cpp
source/: Application.cpp  Application.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  MonaEngine.hpp  main.cpp
source/Animation/: AnimationClip.cpp  AnimationClip.hpp  AnimationClipManager.cpp  AnimationClipManager.hpp  AnimationController.cpp  AnimationController.hpp  AnimationSystem.cpp  AnimationSystem.hpp  CrossFadeTarget.hpp  JointPose.hpp  SkeletalMeshComponent.hpp  Skeleton.cpp  Skeleton.hpp  SkeletonManager.cpp  SkinnedMesh.hpp
source/Audio/: AudioClip.cpp  AudioClip.hpp  AudioClipManager.cpp  AudioClipManager.hpp  AudioMacros.hpp  AudioSource.cpp  AudioSource.hpp  AudioSourceComponent.cpp  AudioSourceComponent.hpp  AudioSourceComponentLifetimePolicy.hpp  AudioSystem.cpp  AudioSystem.hpp
source/CharacterNavigation/: AnimationValidator.cpp  AnimationValidator.hpp  BVHManager.cpp  BVHManager.hpp  EnvironmentData.cpp  EnvironmentData.hpp  GradientDescent.cpp  GradientDescent.hpp  HeightMap.cpp  HeightMap.hpp  IK.cpp  IK.hpp  IKNavigationComponent.hpp  IKNavigationLifetimePolicy.hpp  IKNavigationManager.cpp  IKNavigationManager.hpp  IKNavigationSystem.cpp  IKNavigationSystem.hpp  IKRig.cpp  IKRig.hpp  IKRigBase.cpp  IKRigBase.hpp  IKRigController.cpp  IKRigController.hpp  Kinematics.cpp  Kinematics.hpp  MeshData.cpp  MeshData.hpp  ParametricCurves.cpp  ParametricCurves.hpp  Retargeting.cpp  Retargeting.hpp  Splines.cpp  Splines.hpp  TrajectoryGeneration.cpp  TrajectoryGeneration.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  TrajectoryGeneratorBase.cpp  TrajectoryGeneratorBase.hpp
source/CharacterNavigation/blender_rendering/: input.bvh  load_bvh_pair.py  load_bvh_single.py  result.bvh
source/CharacterNavigation/blender_rendering/pySrc/: BVH.py  load_bvh_pair.py  load_bvh_single.py
source/CharacterNavigation/bvh_python/: Animation.py  AnimationStructure.py  BVH_mod.py  bvh_parser.py  bvh_writer.py  cython_interface.cpp  cython_interface.h  cython_interface.pyx  cython_setup.py  option_parser.py  skeleton.py
source/CharacterNavigation/bvh_python/pySrc/: Animation.py  BVH.py  BVH_mod.py  Quaternions.py  bvh_handler.py  bvh_parser.py  bvh_writer.py  unified.py
source/CharacterNavigation/fbx2bvh/: fbx2bvh.py
source/CharacterNavigation/format_conversion/: bvh2fbx.py  fbx2bvh.py  idle.bvh  input1.fbx  input2.bvh  input2.fbx  jump.bvh  right turn.bvh  running1.bvh  running2.bvh  running2.fbx  walking.bvh
source/Core/: AssimpTransformations.hpp  Common.h  Common.hpp  Config.cpp  Config.hpp  FuncUtils.hpp  GlmUtils.hpp  Log.cpp  Log.h  Log.hpp  Root.h  RootDirectory.cpp  RootDirectory.hpp
source/DebugDrawing/: BulletDebugDraw.cpp  DebugDrawingSystem.cpp  DebugDrawingSystem.hpp  IKNavigationDebugDraw.cpp  IKNavigationDebugDraw.hpp
source/Event/: EventManager.cpp  EventManager.hpp  Events.hpp
source/PhysicsCollision/: CustomMotionState.hpp  PhysicsCollisionSystem.cpp  PhysicsCollisionSystem.hpp  RaycastResults.hpp  RigidBodyComponent.hpp  RigidBodyComponentPolicies.hpp  RigidBodyLifetimePolicy.hpp  ShapeTypes.hpp
source/Platform/: Input.cpp  Input.hpp  KeyCodes.hpp  Window.cpp  Window.hpp
source/Rendering/: CameraComponent.hpp  DiffuseFlatMaterial.hpp  DiffuseTexturedMaterial.hpp  DirectionalLightComponent.hpp  FlatColorMaterial.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  ModelManager.cpp  ModelManager.hpp  PBRFlatMaterial.hpp  PBRTexturedMaterial.hpp  PointLightComponent.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SpotLightComponent.hpp  StaticMeshComponent.hpp  Texture.cpp  TextureManager.cpp  TextureManager.hpp  TextureMaterial.hpp  UnlitFlatMaterial.hpp  UnlitTexturedMaterial.hpp
source/Utilities/: BasicCameraControllers.hpp  FuncUtils.hpp
source/World/: Component.hpp  ComponentHandle.hpp  ComponentManager.hpp  ComponentTypes.hpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GameObjectTypes.hpp  TransformComponent.hpp  UserHandleTypes.hpp  World.cpp  World.hpp
source/World/Detail/: ComponentManager.hpp  ComponentManager_Implementation.hpp  GameObjectManager.hpp  GameObjectManager_Implementation.hpp  World.hpp  World_Implementation.hpp
tests/: BigVegasCopy.bvh  CMakeLists.txt  IKTest.cpp  NoIKTest.cpp  Test000_ComponentManager.cpp  Test001_GameObjectManager.cpp  Test002_World.cpp  euler_result.bvh  inputCopy.bvh  result.bvh  test.cpp  test_bvh.cpp  test_fbx.cpp  test_ikNav.cpp  test_terrain.cpp  test_terrainRender.cpp
(+6 files in other folders)
